Modification du titre

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body ng-app="UndrunkApp">
 
-	<h1>Undrunk app</h1>
+	<h1>Undrunk app Bastien et Yoan</h1>
 
 	<nav>
 		<a href="/#/accueil">Accueil</a>
