--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
 </head>
 <body ng-app="UndrunkApp">
-
-	<h1>Undrunk app Bastien et Yoan</h1>
+<header>
+	<h1>Undrunk app</h1>
 
 	<nav>
 		<a href="/#/accueil">Accueil</a>
@@ -16,8 +16,9 @@
 		<a href="/#/questions">Questions</a>
 	</nav>
 	<hr>
+</header>
 
-	<div ng-view></div>
+	<main ng-view></main>
 
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
