--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
 	<script src="scripts/app.js"></script>
+	<script src="scripts/controllers/questions.js"></script>
 
 </body>
 </html>
