Intégration mise en page

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Undrunk</title>
-
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
 </head>
 <body ng-app="UndrunkApp">
 <header>
 	<h1>Undrunk app</h1>
 
-	<nav>
-		<a href="/#/accueil">Accueil</a>
-		<a href="/#/scores">Scores</a>
+	<nav class="navbar">
+		<ul>
+			<li><a href="/#/accueil">Accueil</a></li>
+			<li><a href="/#/scores">Scores</a></li>
+		</ul>
 	</nav>
-	<hr>
 </header>
 
 	<main ng-view></main>
