--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="node_modules/angular-route/angular-route.js"></script>
 	<script src="node_modules/ngstorage/ngStorage.js"></script>
 	<script src="scripts/app.js"></script>
-	<script src="scripts/controllers/questions.js"></script>
+	<script src="scripts/controllers.js"></script>
 
 </body>
 </html>
