Ajout commentaire HTML/CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <header>
 	<h1>Undrunk app</h1>
 
+	<!-- Menu -->
 	<nav class="navbar">
 		<ul>
 			<li><a href="/#/accueil">Accueil</a></li>
@@ -18,7 +19,8 @@
 </header>
 
 	<main ng-view></main>
-
+	
+	<!-- Appel des scripts -->
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
 	<script src="node_modules/ngstorage/ngStorage.js"></script>
